Implemented photochemistry in 2D Navier-Stokes, added a planar example

--- a/src/PhysicalModels/NavierStokes2D/Makefile.am
+++ b/src/PhysicalModels/NavierStokes2D/Makefile.am
@@ -7,5 +7,7 @@ libNavierStokes2D_a_SOURCES = \
   NavierStokes2DFunctions.c \
   NavierStokes2DInitialize.c \
 	NavierStokes2DParabolicFunction.c \
+	NavierStokes2DPreStep.c \
 	NavierStokes2DSource.c \
-  NavierStokes2DUpwind.c
+  NavierStokes2DUpwind.c \
+  NavierStokes2DWriteChem.c
