Build system improvements: CMake install prefix and binary naming
Major changes:
- Set default CMake install prefix to source directory (matching autotools behavior)
- Changed from /usr/local default to project directory to avoid permission issues
- Install only executable to bin/ directory, skip headers/docs/examples
- Append build configuration to binary name (compiler, MPI/serial, OpenMP, build type)
  - Format: PIAFS-<compiler>-<mpi|serial>[-omp][-<buildtype>]
  - Examples: PIAFS-gcc-mpi, PIAFS-clang-serial-omp, PIAFS-gcc-mpi-debug

Build information:
- Add detailed build information to startup output
- Display version, git hash/branch, build date, build type, MPI mode, OpenMP status
- Generate build_info.h from template with build-time information

CMake improvements:
- Fix MPI linking issues with Cray MPICH by parsing mpicxx -show output
- Properly handle -Wl,--whole-archive flags in linker options
- Add robust MPI include directory detection for HIP builds
- Ensure C++ files are compiled as C++ (not HIP) when using hipcc

Autotools improvements:
- Match CMake binary naming convention
- Update documentation to reflect new install behavior and binary naming

Documentation:
- Update README.md and build documentation
- Document default install prefix behavior
- Update binary naming examples in documentation

This improves build system consistency between CMake and Autotools, makes
installation easier (no root permissions needed), and provides better
build identification through binary naming and startup information.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,22 @@ string(STRIP "${PIAFS_VERSION}" PIAFS_VERSION)
 
 project(piafs VERSION ${PIAFS_VERSION} LANGUAGES C CXX)
 
+# Make version available to subdirectories
+set_property(GLOBAL PROPERTY PIAFS_VERSION ${PIAFS_VERSION})
+
+# Set default install prefix to source directory (like autotools)
+# This matches autotools behavior: AC_PREFIX_DEFAULT('$(top_srcdir)')
+# Override CMake's default (/usr/local) with source directory
+# Check if user hasn't explicitly set a different prefix
+if(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
+  set(CMAKE_INSTALL_PREFIX "${CMAKE_SOURCE_DIR}" CACHE PATH "Install path prefix" FORCE)
+  message(STATUS "Setting default install prefix to source directory: ${CMAKE_INSTALL_PREFIX}")
+elseif(CMAKE_INSTALL_PREFIX STREQUAL "/usr/local")
+  # Also override if it's still the default /usr/local (in case the flag above didn't work)
+  set(CMAKE_INSTALL_PREFIX "${CMAKE_SOURCE_DIR}" CACHE PATH "Install path prefix" FORCE)
+  message(STATUS "Overriding /usr/local default, setting install prefix to source directory: ${CMAKE_INSTALL_PREFIX}")
+endif()
+
 # Set C and C++ standards
 set(CMAKE_C_STANDARD 99)
 set(CMAKE_C_STANDARD_REQUIRED ON)
@@ -100,10 +116,109 @@ link_libraries(m)
 add_subdirectory(src)
 
 # Installation
-install(DIRECTORY include/ DESTINATION include/piafs)
-install(DIRECTORY Examples DESTINATION share/piafs)
-install(DIRECTORY Extras DESTINATION share/piafs)
-install(FILES README.md LICENSE DESTINATION share/doc/piafs)
+# Only install the executable to bin/ (matching autotools minimal install)
+# Headers, Examples, Extras, and docs are not installed by default
+
+# Get git information
+find_package(Git QUIET)
+set(PIAFS_GIT_HASH "unknown")
+set(PIAFS_GIT_BRANCH "unknown")
+if(GIT_FOUND)
+  execute_process(
+    COMMAND ${GIT_EXECUTABLE} rev-parse --short HEAD
+    WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
+    OUTPUT_VARIABLE PIAFS_GIT_HASH
+    OUTPUT_STRIP_TRAILING_WHITESPACE
+    ERROR_QUIET
+  )
+  execute_process(
+    COMMAND ${GIT_EXECUTABLE} rev-parse --abbrev-ref HEAD
+    WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
+    OUTPUT_VARIABLE PIAFS_GIT_BRANCH
+    OUTPUT_STRIP_TRAILING_WHITESPACE
+    ERROR_QUIET
+  )
+endif()
+
+# Get build date
+string(TIMESTAMP PIAFS_BUILD_DATE "%Y-%m-%d %H:%M:%S" UTC)
+
+# Get compiler version
+set(PIAFS_COMPILER_VERSION "unknown")
+if(CMAKE_CXX_COMPILER_VERSION)
+  set(PIAFS_COMPILER_VERSION "${CMAKE_CXX_COMPILER_VERSION}")
+endif()
+
+# Get MPI version
+set(PIAFS_MPI_VERSION "unknown")
+if(NOT ENABLE_SERIAL)
+  if(MPI_FOUND AND MPI_VERSION)
+    set(PIAFS_MPI_VERSION "${MPI_VERSION}")
+  elseif(MPI_FOUND AND MPI_C_COMPILER)
+    # Try to extract MPI version from mpicc --version
+    execute_process(
+      COMMAND ${MPI_C_COMPILER} --version
+      OUTPUT_VARIABLE MPI_VERSION_OUTPUT
+      ERROR_VARIABLE MPI_VERSION_ERROR
+      OUTPUT_STRIP_TRAILING_WHITESPACE
+      ERROR_STRIP_TRAILING_WHITESPACE
+    )
+    if(MPI_VERSION_OUTPUT)
+      # Look for version pattern like "version X.Y.Z" or "X.Y.Z"
+      # For "mpicc for MVAPICH2 version 2.3.7", we want to match "version 2.3"
+      # Try to match version after "version" keyword first (e.g., "version 2.3.7")
+      # Use case-insensitive match and allow for various formats
+      string(REGEX MATCH "[Vv]ersion[ ]+([0-9]+)\\.([0-9]+)" MPI_VERSION_MATCH "${MPI_VERSION_OUTPUT}")
+      if(MPI_VERSION_MATCH)
+        # Validate: major version should be reasonable (1-9 for common MPI versions)
+        # Most MPI versions are 1.x, 2.x, 3.x, 4.x - allow up to 9
+        if(CMAKE_MATCH_1 GREATER 0 AND CMAKE_MATCH_1 LESS 10)
+          set(PIAFS_MPI_VERSION "${CMAKE_MATCH_1}.${CMAKE_MATCH_2}")
+          set(MPI_VERSION "${CMAKE_MATCH_1}.${CMAKE_MATCH_2}" CACHE STRING "MPI version" FORCE)
+        endif()
+      else()
+        # Fallback: match first X.Y pattern, but validate it looks like a version
+        # Look for patterns that are likely version numbers (1-9.x)
+        string(REGEX MATCH "([1-9])\\.([0-9]+)" MPI_VERSION_MATCH "${MPI_VERSION_OUTPUT}")
+        if(MPI_VERSION_MATCH)
+          set(PIAFS_MPI_VERSION "${CMAKE_MATCH_1}.${CMAKE_MATCH_2}")
+          set(MPI_VERSION "${CMAKE_MATCH_1}.${CMAKE_MATCH_2}" CACHE STRING "MPI version" FORCE)
+        endif()
+      endif()
+    endif()
+  endif()
+endif()
+
+# Set build configuration strings
+if(ENABLE_SERIAL)
+  set(PIAFS_MPI_MODE "serial")
+else()
+  set(PIAFS_MPI_MODE "mpi")
+endif()
+
+if(ENABLE_OMP)
+  set(PIAFS_OPENMP "enabled")
+else()
+  set(PIAFS_OPENMP "disabled")
+endif()
+
+# Get compiler name
+if(CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
+  set(PIAFS_COMPILER "gcc")
+elseif(CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
+  set(PIAFS_COMPILER "clang")
+elseif(CMAKE_CXX_COMPILER_ID STREQUAL "Intel")
+  set(PIAFS_COMPILER "intel")
+else()
+  string(TOLOWER "${CMAKE_CXX_COMPILER_ID}" PIAFS_COMPILER)
+endif()
+
+# Generate build_info.h
+configure_file(
+  ${CMAKE_CURRENT_SOURCE_DIR}/build_info.h.in
+  ${CMAKE_CURRENT_BINARY_DIR}/build_info.h
+  @ONLY
+)
 
 # Generate config.h for compatibility
 configure_file(${CMAKE_CURRENT_SOURCE_DIR}/config.h.in ${CMAKE_CURRENT_BINARY_DIR}/config.h)
@@ -113,12 +228,8 @@ include_directories(${CMAKE_CURRENT_BINARY_DIR})
 enable_testing()
 
 # Create a custom target to copy PIAFS binary to bin/ before running tests
-add_custom_target(prepare_test_binary
-  COMMAND ${CMAKE_COMMAND} -E make_directory ${CMAKE_BINARY_DIR}/bin
-  COMMAND ${CMAKE_COMMAND} -E copy_if_different $<TARGET_FILE:PIAFS> ${CMAKE_BINARY_DIR}/bin/PIAFS
-  DEPENDS PIAFS
-  COMMENT "Copying PIAFS binary to bin/ for testing"
-)
+# Note: PIAFS_EXECUTABLE_NAME is set in src/CMakeLists.txt, so we'll create this target
+# after src/CMakeLists.txt is processed (moved to end of file)
 
 # Set PIAFS_DIR environment variable for tests
 set(ENV{PIAFS_DIR} ${CMAKE_BINARY_DIR})
@@ -159,3 +270,50 @@ message(STATUS "  Install prefix: ${CMAKE_INSTALL_PREFIX}")
 message(STATUS "  Testing: Enabled (use 'make test' or 'ctest')")
 message(STATUS "  MPI executor for tests: ${MPIEXEC}")
 message(STATUS "")
+
+# Create a custom target to copy PIAFS binary to bin/ before running tests
+# This must be after src/CMakeLists.txt is processed so PIAFS_EXECUTABLE_NAME is available
+if(EXISTS "${CMAKE_SOURCE_DIR}/src/CMakeLists.txt")
+  # Get the executable name from src/CMakeLists.txt
+  # We need to read it or set it here - let's set it here to match src/CMakeLists.txt logic
+  set(PIAFS_NAME_SUFFIX "")
+  
+  # Add compiler info
+  if(CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
+    set(PIAFS_NAME_SUFFIX "${PIAFS_NAME_SUFFIX}-gcc")
+  elseif(CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
+    set(PIAFS_NAME_SUFFIX "${PIAFS_NAME_SUFFIX}-clang")
+  elseif(CMAKE_CXX_COMPILER_ID STREQUAL "Intel")
+    set(PIAFS_NAME_SUFFIX "${PIAFS_NAME_SUFFIX}-intel")
+  else()
+    string(TOLOWER "${CMAKE_CXX_COMPILER_ID}" COMPILER_LOWER)
+    set(PIAFS_NAME_SUFFIX "${PIAFS_NAME_SUFFIX}-${COMPILER_LOWER}")
+  endif()
+  
+  # Add MPI/serial info
+  if(ENABLE_SERIAL)
+    set(PIAFS_NAME_SUFFIX "${PIAFS_NAME_SUFFIX}-serial")
+  else()
+    set(PIAFS_NAME_SUFFIX "${PIAFS_NAME_SUFFIX}-mpi")
+  endif()
+  
+  # Add OpenMP info
+  if(ENABLE_OMP)
+    set(PIAFS_NAME_SUFFIX "${PIAFS_NAME_SUFFIX}-omp")
+  endif()
+  
+  # Add build type (if not Release)
+  if(NOT CMAKE_BUILD_TYPE STREQUAL "Release")
+    string(TOLOWER "${CMAKE_BUILD_TYPE}" BUILD_TYPE_LOWER)
+    set(PIAFS_NAME_SUFFIX "${PIAFS_NAME_SUFFIX}-${BUILD_TYPE_LOWER}")
+  endif()
+  
+  set(PIAFS_EXECUTABLE_NAME "PIAFS${PIAFS_NAME_SUFFIX}")
+  
+  add_custom_target(prepare_test_binary
+    COMMAND ${CMAKE_COMMAND} -E make_directory ${CMAKE_BINARY_DIR}/bin
+    COMMAND ${CMAKE_COMMAND} -E copy_if_different $<TARGET_FILE:${PIAFS_EXECUTABLE_NAME}> ${CMAKE_BINARY_DIR}/bin/${PIAFS_EXECUTABLE_NAME}
+    DEPENDS ${PIAFS_EXECUTABLE_NAME}
+    COMMENT "Copying ${PIAFS_EXECUTABLE_NAME} binary to bin/ for testing"
+  )
+endif()
