feat: Overhaul testing framework and expand test coverage
This commit introduces a major overhaul of the testing infrastructure,
migrating from a single script to a structured, dual-system approach for
both CMake and Autotools. It also adds a comprehensive unit testing
framework and expands regression test coverage.

Key changes:

- **Unified Testing Architecture**:
  - Replaced the monolithic `test_mpi.sh` with a structured system that
    provides consistent behavior across CMake and Autotools.
  - Implemented parallel testing architectures for both build systems,
    including benchmark setup, verification, and individual test execution.

- **Comprehensive Unit Testing**:
  - Introduced a new unit testing framework (`Tests/unit`).
  - Added extensive unit tests for core components, including ArrayFunctions,
    MathFunctions, CommonFunctions, and more.
  - Resolved various build and runtime issues to enable testing (e.g.,
    C/C++ name mangling, memory allocation).

- **Enhanced Regression Testing**:
  - Added 6 new regression benchmarks to improve coverage of spatial
    and time integration schemes.
  - Enabled detailed, per-test PASS/FAIL reporting for Autotools.
  - Improved failure analysis by displaying detailed `PIAFS_DIFF` output.
  - Added auto-detection of MPI launchers (`srun`, `jsrun`, `mpiexec`) in
    the Autotools build to improve portability on HPC systems.

- **Bug Fixes & Documentation**:
  - Fixed `fread()` error checking in `piafsDiff_RegTests`.
  - Addressed memory initialization bugs in interpolation function tests.
  - Updated `Tests/README.md` and other documentation to reflect the new
    testing framework and expanded coverage.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -43,7 +43,8 @@ if(NOT ENABLE_SERIAL)
   find_package(MPI REQUIRED)
   if(MPI_C_FOUND)
     message(STATUS "Found MPI C compiler: ${MPI_C_COMPILER}")
-    set(CMAKE_C_COMPILER ${MPI_C_COMPILER})
+    # Add MPI include directories globally for all C code
+    include_directories(${MPI_C_INCLUDE_DIRS})
   else()
     message(WARNING "MPI C compiler not found, building in serial mode")
     add_compile_definitions(serial)
@@ -52,7 +53,8 @@ if(NOT ENABLE_SERIAL)
 
   if(MPI_CXX_FOUND)
     message(STATUS "Found MPI C++ compiler: ${MPI_CXX_COMPILER}")
-    set(CMAKE_CXX_COMPILER ${MPI_CXX_COMPILER})
+    # Add MPI include directories globally for all C++ code
+    include_directories(${MPI_CXX_INCLUDE_DIRS})
   else()
     message(WARNING "MPI C++ compiler not found, building in serial mode")
     add_compile_definitions(serial)
@@ -227,26 +229,11 @@ include_directories(${CMAKE_CURRENT_BINARY_DIR})
 # Testing support
 enable_testing()
 
-# Create a custom target to copy PIAFS binary to bin/ before running tests
-# Note: PIAFS_EXECUTABLE_NAME is set in src/CMakeLists.txt, so we'll create this target
-# after src/CMakeLists.txt is processed (moved to end of file)
+# Add unit tests
+add_subdirectory(Tests/unit)
 
-# Set PIAFS_DIR environment variable for tests
-set(ENV{PIAFS_DIR} ${CMAKE_BINARY_DIR})
-
-# Add the test
-add_test(
-  NAME piafs_regression_tests
-  COMMAND ${CMAKE_CURRENT_SOURCE_DIR}/Tests/test_mpi.sh
-  WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
-)
-
-# Set environment variables for the test
-set_tests_properties(piafs_regression_tests PROPERTIES
-  ENVIRONMENT "PIAFS_DIR=${CMAKE_BINARY_DIR};PIAFS_SRC_DIR=${CMAKE_SOURCE_DIR};MPIEXEC=${MPIEXEC}"
-  TIMEOUT 3600
-  FIXTURES_REQUIRED prepare_binary
-)
+# Add regression tests (CMake-based, replaces test_mpi.sh)
+add_subdirectory(Tests)
 
 # Add a fixture to ensure binary is prepared before testing
 add_test(
