perf(gpu): Stream-based overlap, specialized kernels, and memory optimizations
- Add CUDA stream-based overlap for MPI boundary exchange (pack/unpack)
- Add specialized 3D flux derivative kernels for nvars=5 and nvars=12
- Add specialized LLF upwind kernels for nvars=5 and nvars=12
- Add pinned memory and batched transfers for MPI exchange
- Add memory pooling for CFL computation, BC kernels, and flux launch
- Add runtime detection for GPU-aware MPI support
- Optimize NS3D RF upwind kernel with memory pooling
- Remove unnecessary GPUSync() and cudaDeviceSynchronize calls
- Remove unused nk_I variable in flux derivative kernels
- Disable NaN checking by default (enable only in Debug builds)
- Build: Place binary in bin/ and simplify test fixture
- Updated .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,8 @@ Makefile.in
 aclocal.m4
 autom4te.cache/
 bin/
-build*
+build
+build.*
 config.h.in
 configure
 config.h
@@ -31,3 +32,6 @@ PIAFS
 VERSION
 test-driver
 test_run_temp/
+lib
+gmock
+gtest
