--- a/.github/workflows/autotools-builds.yml
+++ b/.github/workflows/autotools-builds.yml
@@ -17,13 +17,11 @@ jobs:
       run: autoreconf -i && CC=gcc CXX=g++ ./configure --enable-serial
     - name: Build
       run: make -j$(nproc)
-    - name: Test
-      run: make check
     - name: Verify executable
       run: |
         make install
         test -f bin/PIAFS
-        echo "Serial build successful"
+        echo "Serial build successful (regression tests skipped - require MPI)"
 
   mpich:
     name: MPI (MPICH)
@@ -38,6 +36,10 @@ jobs:
       run: make -j$(nproc)
     - name: Test
       run: make check
+      env:
+        # MPICH doesn't need special flags for running as root
+        # Tests use mpiexec from the configure step
+        VERBOSE: 1
     - name: Verify executable
       run: |
         make install
@@ -57,6 +59,13 @@ jobs:
       run: make -j$(nproc)
     - name: Test
       run: make check
+      env:
+        # Allow OpenMPI to run as root inside GitHub Actions containers
+        OMPI_ALLOW_RUN_AS_ROOT: "1"
+        OMPI_ALLOW_RUN_AS_ROOT_CONFIRM: "1"
+        # Allow oversubscription (up to 4 MPI ranks on 2-vCPU runners)
+        OMPI_MCA_rmaps_base_oversubscribe: "1"
+        VERBOSE: 1
     - name: Verify executable
       run: |
         make install
@@ -76,6 +85,13 @@ jobs:
       run: make -j$(nproc)
     - name: Test
       run: make check
+      env:
+        # Allow OpenMPI to run as root inside GitHub Actions containers
+        OMPI_ALLOW_RUN_AS_ROOT: "1"
+        OMPI_ALLOW_RUN_AS_ROOT_CONFIRM: "1"
+        # Allow oversubscription (up to 4 MPI ranks on 2-vCPU runners)
+        OMPI_MCA_rmaps_base_oversubscribe: "1"
+        VERBOSE: 1
     - name: Verify executable
       run: |
         make install
