ci: Add indentation check to enforce consistent spacing

--- a/.github/workflows/style.yml
+++ b/.github/workflows/style.yml
@@ -18,3 +18,11 @@ jobs:
       - uses: actions/checkout@v4
       - name: Check trailing whitespaces
         run: bash .github/workflows/style/check_trailing_whitespaces.sh
+
+  indentation:
+    name: Check indentation
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Check indentation
+        run: bash .github/workflows/style/check_indentation.sh
